fixing overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -295,7 +295,7 @@
   }
 
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
